test/semantic_error/se_const_redef.c0
const int a = 1;
const char a = 'a';

int main() {}
